[gd_scene load_steps=3 format=3 uid="uid://tvelcr33ffrq"]

[ext_resource type="Script" uid="uid://be36uqgdftu4y" path="res://src/game/healthbar.gd" id="1_uw4jx"]
[ext_resource type="Texture2D" uid="uid://cy73vk0l6eeak" path="res://assets/cowboy_hat.png" id="2_6pbap"]

[node name="Healthbar" type="HBoxContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 64.0
grow_horizontal = 0
alignment = 2
script = ExtResource("1_uw4jx")

[node name="HealthMarker" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_6pbap")
expand_mode = 2

[node name="HealthMarker2" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_6pbap")
expand_mode = 2

[node name="HealthMarker3" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_6pbap")
expand_mode = 2
